--- a/tasks/tasks.json
+++ b/tasks/tasks.json
@@ -102,7 +102,7 @@
         4,
         7
       ],
-      "status": "pending",
+      "status": "done",
       "subtasks": []
     },
     {
@@ -116,7 +116,7 @@
         3,
         7
       ],
-      "status": "pending",
+      "status": "done",
       "subtasks": []
     },
     {
@@ -129,7 +129,7 @@
       "dependencies": [
         1
       ],
-      "status": "pending",
+      "status": "in-progress",
       "subtasks": []
     },
     {
@@ -149,7 +149,7 @@
         8,
         9
       ],
-      "status": "pending",
+      "status": "done",
       "subtasks": []
     },
     {
