--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -15,7 +15,7 @@
   },
   
   "action": {
-    
+    "default_popup": "popup.html",
     "default_title": "Modbus Debugger",
     "default_icon": {
       "16": "icons/icon-16.png",
