--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -4,11 +4,11 @@
   "description": "Chrome extension for Modbus Protocol Debugging with Web Serial API and Native Messaging",
   "main": "dist/background.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode development --watch",
+    "build": "NODE_ENV=production vite build",
+    "dev": "NODE_ENV=development vite build --watch",
     "clean": "rm -rf dist",
-    "lint": "eslint src --ext .ts,.tsx",
-    "lint:fix": "eslint src --ext .ts,.tsx --fix",
+    "lint": "eslint ../src --ext .ts,.tsx",
+    "lint:fix": "eslint ../src --ext .ts,.tsx --fix",
     "typecheck": "tsc --noEmit"
   },
   "keywords": ["chrome-extension", "modbus", "serial", "debugging"],
@@ -20,19 +20,12 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.4.19",
-    "copy-webpack-plugin": "^12.0.2",
-    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.38",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.5.2",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4"
+    "vite": "^5.3.1",
+    "@vitejs/plugin-legacy": "^5.4.1"
   },
   "dependencies": {
     "ws": "^8.17.1"
