--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "Modbus Protocol Debugger with real-time monitoring and analysis",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "webpack serve --mode development --open",
-    "build": "webpack --mode production",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "typecheck": "tsc --noEmit",
     "start": "npm run dev"
   },
-  "keywords": ["modbus", "debugger", "dashboard", "serial", "tcp", "monitoring"],
+  "keywords": [
+    "modbus",
+    "debugger",
+    "dashboard",
+    "serial",
+    "tcp",
+    "monitoring"
+  ],
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -19,19 +27,11 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "autoprefixer": "^10.4.19",
-    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.0",
     "postcss": "^8.4.38",
-    "postcss-loader": "^8.1.1",
-    "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
-    "ts-loader": "^9.5.1",
     "typescript": "^5.5.2",
-    "webpack": "^5.92.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "vite": "^5.3.1"
   },
   "dependencies": {
     "ws": "^8.17.1"
