--- a/stdio-proxy/package.json
+++ b/stdio-proxy/package.json
@@ -14,10 +14,7 @@
     "compile:macos": "npx pkg dist/proxy.js --targets node22-macos-x64 --output ./dist/stdio-proxy-macos-x64",
     "compile:windows": "npx pkg dist/proxy.js --targets node22-win-x64 --output ./dist/stdio-proxy-windows-x64.exe",
     "compile:linux": "npx pkg dist/proxy.js --targets node22-linux-x64 --output ./dist/stdio-proxy-linux-x64",
-    "package": "npm run build && npm run compile:all && npm run create-packages",
-    "create-packages": "node scripts/create-packages.js",
-    "postinstall": "node scripts/install-native-host.js",
-    "preuninstall": "node scripts/uninstall-native-host.js"
+    "package": "npm run build && npm run compile:all && node scripts/create-packages.js"
   },
   "pkg": {
     "assets": [
