--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Modbus Protocol Debugger",
+  "name": "Modbus Protocol Analyzer",
   "version": "1.0.0",
   "description": "Professional Modbus RTU/TCP debugging tool with real-time packet analysis",
   
@@ -16,7 +16,7 @@
   },
   
   "action": {
-    "default_title": "Modbus Debugger",
+    "default_title": "Modbus Protocol Analyzer",
     "default_icon": {
       "16": "icons/icon-16.png",
       "32": "icons/icon-32.png",
