manifest.json update

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,13 +1,12 @@
 {
   "manifest_version": 3,
   "name": "Modbus Protocol Analyzer",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Professional Modbus RTU/TCP debugging tool with real-time packet analysis",
   
   "permissions": [
     "nativeMessaging", 
-    "storage",
-    "tabs"
+    "storage"
   ],
   
   
