--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "build": "NODE_ENV=production bun run vite build",
     "dev": "NODE_ENV=development bun run vite build --watch",
+    "dev:reload": "NODE_ENV=development bun run vite build --watch --mode development",
+    "dev:server": "node scripts/start-dev-server.js",
     "clean": "rm -rf dist",
     "lint": "bun run eslint ../src --ext .ts,.tsx",
     "lint:fix": "bun run eslint ../src --ext .ts,.tsx --fix",
