--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "bun run eslint src --ext .ts,.tsx",
     "lint:fix": "bun run eslint src --ext .ts,.tsx --fix",
     "typecheck": "bun run tsc --noEmit",
-    "start": "bun run dev"
+    "start": "bun run dev",
+    "dev:extension": "cd chrome-extension && bun run dev:server"
   },
   "keywords": [
     "modbus",
