--- a/chrome-extension/package.json
+++ b/chrome-extension/package.json
@@ -1,6 +1,6 @@
 {
   "name": "modbus-analyzer-chrome-extension",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Chrome extension for Modbus Protocol Analyzer with Web Serial API and Native Messaging",
   "main": "dist/background.js",
   "scripts": {
@@ -11,11 +11,7 @@
     "clean": "rm -rf dist",
     "lint": "bun run eslint ../src --ext .ts,.tsx",
     "lint:fix": "bun run eslint ../src --ext .ts,.tsx --fix",
-    "typecheck": "bun run tsc --noEmit",
-    "pack": "node scripts/build-extension.js",
-    "pack:dev": "bun run build && bun run pack:zip",
-    "pack:zip": "cd dist && zip -r ../modbus-analyzer-extension-v$(node -p \"require('../package.json').version\").zip . -x '*.map' '*.DS_Store' 'node_modules/*'",
-    "pack:clean": "rm -f modbus-analyzer-extension-v*.zip && rm -rf dist"
+    "typecheck": "bun run tsc --noEmit"
   },
   "keywords": [
     "chrome-extension",
